add password field

--- a/src/app/seguranca/login/login.component.html
+++ b/src/app/seguranca/login/login.component.html
@@ -14,27 +14,32 @@
 
                 <form autocomplete="off" class="p-col-12 formLogin" #formLogin="ngForm">
 
-                    <div class="p-col-12 p-field">
-                        <label for="email">Usuário</label>
-                        <input id="email" class="p-col-12" type="email" name="email" [(ngModel)]="login.email" pInputText required email #email="ngModel" ngModel/>
+                    <div class="p-fluid">
+                        <div class="p-field">
+                            <label for="email">Usuário</label>
+                            <input id="email" type="email" name="email" [(ngModel)]="login.email" pInputText required email #email="ngModel" ngModel/>
 
-                        <app-mensagem-de-erro [controle]="email" erro="required" mensagem="Informe o email"></app-mensagem-de-erro>
-                        <app-mensagem-de-erro [controle]="email" erro="email" mensagem="E-mail inválido"></app-mensagem-de-erro>
+                            <app-mensagem-de-erro [controle]="email" erro="required" mensagem="Informe o email"></app-mensagem-de-erro>
+                            <app-mensagem-de-erro [controle]="email" erro="email" mensagem="E-mail inválido"></app-mensagem-de-erro>
 
 
-                    </div>
+                        </div>
 
-                    <div class="p-col-12 p-field">
-                        <label for="senha">Senha</label>
-                        <input id="senha" class="p-col-12" type="text" name="senha" [(ngModel)]="login.senha" minlength="6" maxlength="100" pInputText required #senha="ngModel" ngModel/>
+                        <div class="p-field">
+                            <label for="senha">Senha</label>
+                            <!-- <input id="senha" class="p-col-12" type="text" name="senha" [(ngModel)]="login.senha" minlength="6" maxlength="100" pInputText required #senha="ngModel" ngModel/> -->
 
-                        <app-mensagem-de-erro [controle]="senha" erro="required" mensagem="Informe a senha"></app-mensagem-de-erro>
-                        <app-mensagem-de-erro [controle]="senha" erro="minlength" mensagem="Mínimo de {{senha.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
+                            <p-password id="senha" [feedback]="false" toggleMask=true name="senha" [(ngModel)]="login.senha" minlength="6" maxlength="100" required #senha="ngModel" ngModel></p-password>
 
-                    </div>
 
-                    <div class="p-col-12">
-                        <button pButton type="button" label="Entrar" class="p-col-12" (click)="logar()" [disabled]="!formLogin.valid"></button>
+                            <app-mensagem-de-erro [controle]="senha" erro="required" mensagem="Informe a senha"></app-mensagem-de-erro>
+                            <app-mensagem-de-erro [controle]="senha" erro="minlength" mensagem="Mínimo de {{senha.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
+
+                        </div>
+
+                        <div>
+                            <button pButton type="button" label="Entrar" (click)="logar()" [disabled]="!formLogin.valid"></button>
+                        </div>
                     </div>
 
                 </form>
