--- a/src/app/seguranca/login/login.component.css
+++ b/src/app/seguranca/login/login.component.css
@@ -14,3 +14,17 @@
     height: 150px;
     width: 150px;
 }
+
+.link-esqueci-senha {
+    padding: 0;
+    font-size: 0.9rem;
+    margin-bottom: 30px;
+}
+
+.header-recuperar-senha {
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #404C51;
+    width: 100%;
+}
