--- a/src/app/core/navbar/navbar.component.css
+++ b/src/app/core/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 .navbar {
-    padding: 20px 0 10px;
-    background-color: #1e94d2;
+    padding: 20px 20px;
+    background-color: var(--color-primary-blue);
 }
 
 .navbar-toggle {
@@ -27,6 +27,9 @@
     text-transform: uppercase;
     font-weight: bold;
     color: #fff;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .navbar-menuitem {
