--- a/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.html
+++ b/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="footer">
-                        <a id="btn-cancelar" pButton routerLink="/usuarios" label="Cancelar" (click)="voltar()"></a>
+                        <a id="btn-cancelar" pButton routerLink="/usuarios" label="Cancelar"></a>
                         <button pButton type="button" label="Salvar" (click)="salvar()" [disabled]="!formNovoUsuario.valid"></button>
                     </div>
 
