adiciona soft delete e alguns  ajustes

--- a/src/app/core/navbar/navbar.component.css
+++ b/src/app/core/navbar/navbar.component.css
@@ -41,6 +41,10 @@
     text-decoration: none;
 }
 
+.navbar-menuitem.logout a {
+    color: #c63737;
+}
+
 .navbar-menuitem a:hover {
     color: #fff;
 }
