--- a/src/app/usuarios/perfil/perfil.component.css
+++ b/src/app/usuarios/perfil/perfil.component.css
@@ -55,3 +55,15 @@ form .footer {
     background-color: #b3e5fc;
     color: #23547b;
 }
+
+.header-confirmacao-senha {
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #404C51;
+    width: 100%;
+}
+
+.btn-okConfirmaSenha {
+    margin-right: 0 !important;
+}
