--- a/src/app/core/pagina-nao-encontrada/pagina-nao-encontrada.component.html
+++ b/src/app/core/pagina-nao-encontrada/pagina-nao-encontrada.component.html
@@ -1,6 +1,8 @@
 <div class="container">
 
-    <h1 class="text-center">Página não encontrada</h1>
-    <p>apresentar uma página mais amigável</p>
+    <div class="text-center">
+        <h1>Página não encontrada</h1>
+        <p>apresentar uma página mais amigável</p>
+    </div>
 
     <div>
