--- a/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
+++ b/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
@@ -12,7 +12,7 @@
                 </div>
 
                 <div>
-                    <a class="btn-new-user" pButton icon="pi pi-plus-circle" pTooltip="Novo usuário" tooltipPosition="bottom" routerLink="/usuarios/novo"></a>
+                    <a class="btn-new-user button-link" pButton icon="pi pi-plus-circle" pTooltip="Novo usuário" tooltipPosition="bottom" routerLink="/usuarios/novo"></a>
                 </div>
             </div>
 
@@ -24,12 +24,12 @@
                 <p-card>
 
                     <div class="user-nome">
-                        <p>{{user.nome}}</p>
+                        <p>{{user.name}}</p>
                     </div>
 
                     <div class="user-matricula">
                         <i class="pi pi-id-card user-icon" pTooltip="matrícula"></i>
-                        <span>{{user.matricula}}</span>
+                        <span>{{user.registration}}</span>
                     </div>
 
                     <div class="user-email">
