--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <ul class="navbar-menu" [hidden]="!exibindoMenu">
-        <li class="navbar-usuario">{{usuarioLogado.nome}}</li>
+        <li class="navbar-usuario">{{usuarioLogado.name}}</li>
         <li class="navbar-menuitem"><a href="javascript:;" routerLink="/home" (click)="omitir()">Home</a></li>
         <li class="navbar-menuitem"><a href="javascript:;" routerLink="/perfil" (click)="omitir()">Perfil</a></li>
         <li class="navbar-menuitem"><a href="javascript:;" routerLink="/usuarios" (click)="omitir()">Usuários</a></li>
