--- a/src/app/seguranca/login/login.component.html
+++ b/src/app/seguranca/login/login.component.html
@@ -12,7 +12,7 @@
                     <h2>DataLab - Incêndios</h2>
                 </div>
 
-                <form autocomplete="off" class="p-col-12 formLogin" #formLogin="ngForm">
+                <form autocomplete="off" class="p-col-12 formLogin" #formLogin="ngForm" (keydown.enter)="submitBtn.click()">
 
                     <div class="p-field p-fluid">
                         <label for="email">Usuário</label>
@@ -24,7 +24,7 @@
 
                     <div class="p-field p-fluid">
                         <label for="senha">Senha</label>
-                        <p-password id="senha" [feedback]="false" toggleMask=true name="senha" [(ngModel)]="login.senha" minlength="6" maxlength="100" required #senha="ngModel" ngModel></p-password>
+                        <p-password id="senha" [feedback]="false" toggleMask=true name="senha" [(ngModel)]="login.password" minlength="6" maxlength="100" required #senha="ngModel" ngModel></p-password>
 
                         <app-mensagem-de-erro [controle]="senha" erro="required" mensagem="Informe a senha"></app-mensagem-de-erro>
                         <app-mensagem-de-erro [controle]="senha" erro="minlength" mensagem="Mínimo de {{senha.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
@@ -35,7 +35,7 @@
                     </div>
 
                     <div class="p-fluid">
-                        <button pButton type="button" label="Entrar" (click)="logar()" [disabled]="!formLogin.valid"></button>
+                        <button pButton type="button" label="Entrar" (click)="logar()" [disabled]="!formLogin.valid" #submitBtn></button>
                     </div>
 
                 </form>
