--- a/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.css
+++ b/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.css
@@ -14,6 +14,20 @@
     text-align: center;
 }
 
+:host ::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-month {
+    width: 150px;
+}
+
+:host ::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-year {
+    width: 55px;
+}
+
+:host ::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-month,
+:host ::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-year {
+    height: 30px;
+    border: 1px solid #ced4da;
+}
+
 
 /* Chrome, Safari, Edge, Opera */
 
