--- a/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.html
+++ b/src/app/usuarios/usuarios-cadastro/usuarios-cadastro.component.html
@@ -12,15 +12,30 @@
 
                     <div class="p-field p-fluid">
                         <label for="nome">Nome</label>
-                        <input id="nome" type="email" name="nome" [(ngModel)]="usuario.nome" minlength="3" maxlength="50" pInputText required #nome="ngModel" ngModel/>
+                        <input id="nome" type="text" name="nome" [(ngModel)]="usuario.name" minlength="3" maxlength="50" pInputText required #nome="ngModel" ngModel/>
 
                         <app-mensagem-de-erro [controle]="nome" erro="required" mensagem="Informe o nome"></app-mensagem-de-erro>
                         <app-mensagem-de-erro [controle]="nome" erro="minlength" mensagem="Mínimo de {{nome.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
                     </div>
 
                     <div class="p-field p-fluid">
+                        <label for="sobrenome">Sobrenome</label>
+                        <input id="sobrenome" type="text" name="sobrenome" [(ngModel)]="usuario.surname" minlength="3" maxlength="50" pInputText required #sobrenome="ngModel" ngModel/>
+
+                        <app-mensagem-de-erro [controle]="nome" erro="required" mensagem="Informe o nome"></app-mensagem-de-erro>
+                        <app-mensagem-de-erro [controle]="nome" erro="minlength" mensagem="Mínimo de {{nome.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
+                    </div>
+
+                    <div class="p-field p-fluid">
+                        <label for="dataNascimento">Data de Nascimento</label>
+                        <p-calendar id="dataNascimento" dateFormat="dd/mm/yy" name="dataNascimento" [(ngModel)]="usuario.birthDate" showIcon="true" monthNavigator="true" yearNavigator="true" yearRange="1900:{{anoAtual}}" readonlyInput="true" required #dataNascimento="ngModel"></p-calendar>
+
+                        <app-mensagem-de-erro [controle]="dataNascimento" erro="required" mensagem="Informe a data de nascimento"></app-mensagem-de-erro>
+                    </div>
+
+                    <div class="p-field p-fluid">
                         <label for="matricula">Matrícula</label>
-                        <input id="matricula" type="number" name="matricula" [(ngModel)]="usuario.matricula" pInputText required #matricula="ngModel" ngModel/>
+                        <input id="matricula" type="number" name="matricula" [(ngModel)]="usuario.registration" pInputText required #matricula="ngModel" ngModel/>
 
                         <app-mensagem-de-erro [controle]="matricula" erro="required" mensagem="Informe a matrícula"></app-mensagem-de-erro>
                     </div>
@@ -33,13 +48,13 @@
                         <app-mensagem-de-erro [controle]="email" erro="email" mensagem="E-mail inválido"></app-mensagem-de-erro>
                     </div>
 
-                    <div class="p-field p-fluid" *ngIf="!editando">
+                    <!-- <div class="p-field p-fluid" *ngIf="!editando">
                         <label for="senha">Senha</label>
-                        <p-password id="senha" [feedback]="false" toggleMask=true name="senha" [(ngModel)]="usuario.senha" minlength="6" maxlength="50" required #senha="ngModel" ngModel></p-password>
+                        <p-password id="senha" [feedback]="false" toggleMask=true name="senha" [(ngModel)]="usuario.password" minlength="6" maxlength="50" required #senha="ngModel" ngModel></p-password>
 
                         <app-mensagem-de-erro [controle]="senha" erro="required" mensagem="Informe a senha"></app-mensagem-de-erro>
                         <app-mensagem-de-erro [controle]="senha" erro="minlength" mensagem="Mínimo de {{senha.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
-                    </div>
+                    </div> -->
 
                     <div class="p-field">
                         <label for="admin">Admin</label>
@@ -47,7 +62,7 @@
                     </div>
 
                     <div class="footer">
-                        <a id="btn-cancelar" pButton routerLink="/usuarios" label="Cancelar"></a>
+                        <a id="btn-cancelar" class="button-link" pButton (click)="goBack()" label="Cancelar"></a>
                         <button pButton type="button" label="Salvar" (click)="salvar()" [disabled]="!formNovoUsuario.valid"></button>
                     </div>
 
