altera logo/favicon

--- a/src/app/seguranca/login/login.component.html
+++ b/src/app/seguranca/login/login.component.html
@@ -7,7 +7,7 @@
             <div class="p-grid">
 
                 <div class="p-col-12 text-center">
-                    <img class="logo" src="../../assets/logo-incendios.png" alt="DataLab - Incêndios Florestais">
+                    <img class="logo" src="../../assets/logo.png" alt="DataLab - Incêndios Florestais">
 
                     <h2>DataLab - Incêndios</h2>
                 </div>
