ajustes e adição de admin guard

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         <li class="navbar-usuario">{{usuarioLogado.name}}</li>
         <li class="navbar-menuitem"><a href="javascript:;" routerLink="/home" (click)="omitir()">Home</a></li>
         <li class="navbar-menuitem"><a href="javascript:;" routerLink="/perfil" (click)="omitir()">Perfil</a></li>
-        <li class="navbar-menuitem"><a href="javascript:;" routerLink="/usuarios" (click)="omitir()">Usuários</a></li>
+        <li *ngIf="usuarioLogado.isAdmin" class="navbar-menuitem"><a href="javascript:;" routerLink="/usuarios" (click)="omitir()">Usuários</a></li>
         <li class="navbar-menuitem logout"><a href="javascript:;" (click)="logout()">Sair</a></li>
     </ul>
 
