--- a/src/app/core/pagina-nao-encontrada/pagina-nao-encontrada.component.html
+++ b/src/app/core/pagina-nao-encontrada/pagina-nao-encontrada.component.html
@@ -2,7 +2,7 @@
 
     <div class="text-center">
         <h1>Página não encontrada</h1>
-        <p>apresentar uma página mais amigável</p>
+        <!-- TODO: apresentar uma página mais amigável -->
     </div>
 
     <div>
