--- a/src/app/usuarios/perfil/perfil.component.html
+++ b/src/app/usuarios/perfil/perfil.component.html
@@ -76,7 +76,7 @@
 
             <ng-template pTemplate="header">
                 <div class="header-confirmacao-senha">
-                    Confirme sua senha
+                    Confirme sua antiga senha
                 </div>
             </ng-template>
 
@@ -86,7 +86,7 @@
                     <label for="senha">Senha</label>
                     <p-password id="senha" [feedback]="false" toggleMask=true name="senha" [(ngModel)]="confirmacaoDeSenha" minlength="6" maxlength="100" required #senha="ngModel" ngModel></p-password>
 
-                    <app-mensagem-de-erro [controle]="senha" erro="required" mensagem="Informe a senha"></app-mensagem-de-erro>
+                    <app-mensagem-de-erro [controle]="senha" erro="required" mensagem="Informe sua antiga senha"></app-mensagem-de-erro>
                     <app-mensagem-de-erro [controle]="senha" erro="minlength" mensagem="Mínimo de {{senha.errors?.minlength?.requiredLength}} caracteres"></app-mensagem-de-erro>
 
                 </div>
