--- a/src/app/usuarios/perfil/perfil.component.html
+++ b/src/app/usuarios/perfil/perfil.component.html
@@ -95,7 +95,7 @@
 
             <ng-template pTemplate="footer">
                 <div class="botoes">
-                    <button id="btn-cancelar" form="form-confirmacao-senha" type="submit" (click)="dialogIsVisible = !dialogIsVisible" label="Cancelar" pButton></button>
+                    <button id="btn-cancelar" form="form-confirmacao-senha" type="submit" (click)="resetarConfirmacaoDeSenha()" (click)="dialogIsVisible = !dialogIsVisible" label="Cancelar" pButton></button>
                     <button class="btn-okConfirmaSenha" form="form-confirmacao-senha" type="submit" (click)="salvar()" (click)="dialogIsVisible = !dialogIsVisible" label="Ok" [disabled]="!formConfirmacaoSenha.valid" pButton></button>
                 </div>
             </ng-template>
