implementa filtro de usuários

--- a/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
+++ b/src/app/usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
@@ -7,7 +7,7 @@
 
             <div class="users-list-header">
                 <div>
-                    <input class="campo-busca" pInputText type="text" [(ngModel)]="busca" name="buscarEnsaio" placeholder="Nome, Matrícula ou E-mail">
+                    <input class="campo-busca" pInputText type="text" [(ngModel)]="busca" name="buscarEnsaio" placeholder="Matrícula ou E-mail">
                     <button pButton icon="pi pi pi-search" pTooltip="Buscar" tooltipPosition="bottom" (click)="filtrar()"></button>
                 </div>
 
